@@ -25,7 +25,7 @@
 #include <stdio.h>
 #include <string.h>
 #include <limits.h>
-#include <assert.h>
+#include "SDCCerr.h"
 #include "SDCCglobl.h"
 #include "SDCChasht.h"
 #include "newalloc.h"
