@@ -23,8 +23,8 @@
 -------------------------------------------------------------------------*/
 
 #include <stdio.h>
-#include <assert.h>
 #include "newalloc.h"
+#include "SDCCerr.h"
 #include "SDCCset.h"
 
 /*-----------------------------------------------------------------*/
